--- a/Zookeeper/pom.xml
+++ b/Zookeeper/pom.xml
@@ -7,6 +7,21 @@
     <groupId>com.lavor</groupId>
     <artifactId>zookeeper</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!--zookeeper的jar包导入-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.6</version>
+        </dependency>
+        <!--zookeeper所依赖的jar包导入-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.6</version>
+            <type>pom</type>
+        </dependency>
 
+    </dependencies>
 
 </project>
